[gd_scene load_steps=3 format=2]

[ext_resource path="res://scripts/GameIntroScreen.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/decay-by-kevin-macleod-from-filmmusic-io.wav" type="AudioStream" id=2]

[node name="Control" type="PanelContainer"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -72.0
margin_top = -29.0
margin_right = 72.0
margin_bottom = 29.0
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 7.0
margin_top = 7.0
margin_right = 137.0
margin_bottom = 51.0
size_flags_horizontal = 3
size_flags_vertical = 3
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GameStart" type="Button" parent="VBoxContainer"]
margin_right = 130.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Start Game"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 24.0
margin_right = 130.0
margin_bottom = 44.0

[node name="Settings" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_right = 63.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Settings"

[node name="Credits" type="Button" parent="VBoxContainer/HBoxContainer"]
margin_left = 67.0
margin_right = 130.0
margin_bottom = 20.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Options"

[node name="Decay" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
[connection signal="pressed" from="VBoxContainer/GameStart" to="." method="_on_GameStart_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Credits" to="." method="_on_Credits_pressed"]
